# osu-scrobbler

./: .gitignore  Cargo.toml  README.md  cliff.toml  config.example.toml  launch_hidden.vbs  rustfmt.toml
.github/workflows/: build.yml
src/: config.rs  last_fm.rs  listenbrainz.rs  logger.rs  main.rs  nerinyan.rs  osu.rs  osu_scrobble.rs  scores.rs  scrobble_loop.rs  spotify.rs  utils.rs
src/osu/: api.rs  mod.rs  nerinyan.rs  scrobble.rs  scrobbler.rs  window.rs
src/scrobbler/: last_fm.rs  listenbrainz.rs  mod.rs
src/scrobbler/last_fm/: mod.rs  queries.rs
src/scrobbler/listenbrainz/: mod.rs  payloads.rs
src/spotify/: mod.rs  payloads.rs
