[package]
name = "osu-scrobbler"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1"
colored = "3"
md5 = "0.8"
musicbrainz_rs = { version = "0.12", default-features = false, features = ["blocking"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
toml = "0.9"
